<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Movie Surveys</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="go">GO-GO-GO</string>
    <string name="survays_activity_name">Survays</string>
    <string name="avaliable_surveys">Available Survays</string>
    <string name="text_tab1">1st Tab</string>
    <string name="text_tab2">2nd Tab</string>
    <string name="text_tab3">3rd Tab</string>
    <string name="text_tab_header">My Header</string>
    <string name="glob_diff">Total rating</string>
    <string name="graph_diff">Last rating</string>
    <string name="difference">difference</string>
    <string name="dinamics">dinamics</string>
    <string name="question">Question asd d fsda fasdfj ;lksad f;jk ;lsdfsdf sadfFD</string>
    <string name="question_info">Question info sadfasdf asd fas dfafsd fasfasdfasdfasdfas dfa sdf </string>
    <string name="answer">Answer</string>
    <string name="answer_info">Answer info</string>
    <string name="answer2">Answer2</string>
    <string name="answer2_info">Answer2 info</string>
    <string name="no_answer">Hard to answer</string>
    <string name="result">Result</string>
    <string name="results">Results</string>
    <string name="new_btn">New BTN</string>
    <string name="item">Answer</string>
    <string name="item_info">Answer info</string>
    <string name="diff">+D</string>
    <string name="image_item_local_diff">Pic item local diff</string>
    <string name="image_item_local">Pic item local</string>
    <string name="image_item_global_diff">Pic item glob diff</string>
    <string name="image_item_global">Pic item global</string>
    <string name="image_question1">Im question 1</string>
    <string name="image_question2">Im question 2</string>
    <string name="for_image">Image</string>
    <string name="best_position">Best:</string>
    <string name="worse_position">Worse:</string>
    <string name="selected">Shoosen results</string>
    <string name="graph_item">results</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="from">From:</string>
    <string name="place3">000</string>
    <string name="separete">___</string>
    <string name="place2">00</string>
    <string name="no_connection">Check internet connection and login again</string>
    <string name="global_rating">Total rating</string>
    <string name="local_rating">My rating</string>
    <string name="no_language">Your system language are not supported. Using default language (English).</string>
    <string name="smth_wrong">Something wrong!</string>
    <string name="connection_problem">Internet connection problem. Check Your connection and try again, please</string>
    <string name="beta">Beta version!</string>
    <string name="end_pic">End of Pictures</string>
    <string name="known_error">Error was found, but we know it and going to fix as fast as possible</string>

</resources>