<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/tvRplace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/activity_hor_small_margin"
        android:text="@string/place2"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageView
        android:id="@+id/ivResItem"
        android:layout_width="60dp"
        android:layout_height="90dp"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/item_very_small_margin"
        android:layout_toRightOf="@id/tvRplace"
        android:contentDescription="@string/image_item_local"
        android:src="@drawable/no_image" />

    <TextView
        android:id="@+id/tvResItemAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/activity_hor_small_margin"
        android:layout_marginRight="40dp"
        android:layout_marginTop="@dimen/activity_ver_small_margin"
        android:layout_toRightOf="@+id/ivResItem"
        android:text="@string/item"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvResItemInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvResItemAnswer"
        android:layout_below="@+id/tvResItemAnswer"
        android:layout_marginRight="40dp"
        android:text="@string/item_info" />

    <TextView
        android:id="@+id/textDiff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_alignTop="@+id/tvResItemAnswer"
        android:layout_marginRight="@dimen/activity_hor_small_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/diff"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/imageDiff"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textDiff"
        android:contentDescription="@string/image_item_local_diff"
        android:src="@drawable/ic_launcher" />

</RelativeLayout>