<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:visibility="visible" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/beta"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvSelect"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/graph_item"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/best_position" />

                <TextView
                    android:id="@+id/tvBest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/place3"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/separete"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/TextView04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/worse_position" />

                <TextView
                    android:id="@+id/tvWorse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/place3"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/separete"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from" />

                <TextView
                    android:id="@+id/tvFrom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/place3"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/ico_back" >

                <com.magicaround.moviesurveysactivity.DrawSurfaceView
                    android:id="@+id/dsv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusableInTouchMode="true"
                    android:onClick="onClick"
                    android:visibility="visible" />
            </RelativeLayout>

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <ImageButton
                    android:id="@+id/ivUp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/for_image"
                    android:onClick="onClickUp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/up" />

                <TextView
                    android:id="@+id/tvUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:onClick="onClickUp"
                    android:text="@string/previous"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right" >

                <TextView
                    android:id="@+id/tvDown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:onClick="onClickDown"
                    android:text="@string/next"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ImageButton
                    android:id="@+id/ivDown"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/for_image"
                    android:onClick="onClickDown"
                    android:scaleType="centerCrop"
                    android:src="@drawable/down" />
            </TableRow>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBarGraph"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible" />
    </RelativeLayout>

</LinearLayout>